--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,22 @@
 </p>
 
 <p>
+  <strong>All Tweets:</strong> <br>
+  <% @user.tweets.each do |singletweet| %>
+  <%= singletweet.status %> <br>
+  <% end %>
+</p>
+
+<p>
   <strong>Email:</strong>
   <%= @user.email %>
+</p>
+
+<p>
+  <strong>All Tweets:</strong> <br>
+  <% @user.tweets.each do |singletweet| %>
+  <%= singletweet.status %> <br>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
